# oppsy-dev

./: .gitignore  CLAUDE.md  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  binstaller.yml  book.toml  dagger.json  demo.mov  docker-compose.yml  ruff.toml  scell.cue
.claude/skills/atlas/: SKILL.md
.claude/skills/design-guide/: .skillfish.json  SKILL.md
.claude/skills/frontend/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend_ci.yml  conventional_commits.yml  cspell.yml  docs.yml  frontend_ci.yml  integration_tests_nightly.yml‎  oppsy_cli_ci.yml  python_ci.yml  release.yml
backend/: Cargo.toml  Dockerfile  deny.toml  rustfmt.toml
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/core-db/: Cargo.toml  Dockerfile  README.md  atlas.hcl  oppsy.db
backend/core-db/sqlite-migrations/: 01_init_workspaces.sql  02_init_notifications.sql  atlas.sum
backend/core-db/src/: lib.rs  version_check.rs
backend/core-db/src/manifest/: errors.rs  mod.rs
backend/core-db/src/manifest_osv_vuln/: errors.rs  mod.rs
backend/core-db/src/notification_channel/: errors.rs  mod.rs
backend/core-db/src/notification_event/: errors.rs  mod.rs
backend/core-db/src/user/: errors.rs  mod.rs
backend/core-db/src/workspace/: errors.rs  mod.rs
backend/core-db/tests/: manifest_osv_vuln.rs  notifications.rs  users.rs  workspaces.rs
backend/core-db/tests/common/: mod.rs
backend/manifest-storage/: Cargo.toml
backend/manifest-storage/src/: errors.rs  lib.rs  manifest_id.rs
backend/notifier/: Cargo.toml
backend/notifier/src/: lib.rs
backend/notifier/src/discord/: mod.rs
backend/notifier/src/email/: mod.rs
backend/notifier/src/webhook/: mod.rs
backend/package-analyzer/: Cargo.toml
backend/package-analyzer/src/: analyzer.rs  lib.rs  manifest_id.rs  package.rs  semver_eval.rs
backend/package-analyzer/src/cargo/: mod.rs  types.rs
backend/package-analyzer/src/go/: mod.rs  test.go.json  types.rs
backend/package-analyzer/src/gradle/: mod.rs  types.rs
backend/package-analyzer/src/maven/: mod.rs  test.dependencies.txt  types.rs  version.rs
backend/package-analyzer/src/npm/: mod.rs  test.package.json  types.rs
backend/package-analyzer/src/poetry/: mod.rs  types.rs
backend/package-analyzer/src/uv/: mod.rs  types.rs
backend/package-analyzer/tests/: analyzer.rs
backend/package-analyzer/tests/osv-db/: README.md
backend/package-analyzer/tests/osv-db/records/: GHSA-599f-7c49-w659.json  GHSA-67q9-58vj-32qx.json  GHSA-8rf9-c59g-f82f.json  GHSA-hqjg-pww4-pcgq.json  GHSA-jfh8-c2jp-5v3q.json  GHSA-p2m9-wcp5-6qw3.json  GHSA-rcp6-88mm-9vgf.json  MAL-2026-1429.json
backend/service/: Cargo.toml
backend/service/src/: background.rs  cue.rs  logger.rs  main.rs
backend/service/src/background/: mod.rs  osv.rs
backend/service/src/db/: manifest_db.rs  mod.rs  osv_db.rs
backend/service/src/db/core_db/: mod.rs
backend/service/src/notifier/: discord.rs  email.rs  mod.rs
backend/service/src/notifier/payload/: meta_schema.cue  mod.rs  webhook.rs
backend/service/src/notifier/payload/email/: mod.rs  schema.cue
backend/service/src/resources/: error.rs  mod.rs
backend/service/src/service/: mcp.rs  mod.rs
backend/service/src/service/api/: echo.rs  mod.rs
backend/service/src/service/api/channels/: create_channel.rs  delete_channel.rs  list_all_events.rs  list_channel_events.rs  list_channels.rs  mod.rs  update_channel.rs
backend/service/src/service/api/health/: get_live.rs  get_ready.rs  mod.rs
backend/service/src/service/api/osv/: get_record.rs  mod.rs  sync_status.rs
backend/service/src/service/api/osv/types/: affected.rs  credit.rs  mod.rs  package.rs  range.rs  record.rs  reference.rs  severity.rs
backend/service/src/service/api/workspaces/: add_manifest.rs  add_workspace_channel.rs  create_manifest.rs  create_workspace.rs  delete_manifest.rs  delete_workspace.rs  delete_workspace_channel.rs  get_manifest_raw.rs  list_manifest_packages.rs  list_manifests.rs  list_workspace_channels.rs  list_workspaces.rs  mod.rs  upload_manifest.rs
backend/service/src/service/auth/: errors.rs  http_client.rs  mod.rs  state.rs  token.rs
backend/service/src/service/auth/dev/: mod.rs
backend/service/src/service/auth/github/: creds.rs  mod.rs
backend/service/src/service/auth/google/: creds.rs  mod.rs
backend/service/src/service/auth/security_scheme/: errors.rs  mod.rs
backend/service/src/service/auth/types/: authorization_code.rs  mod.rs  oauth_state_id.rs
backend/service/src/service/common/: mod.rs
backend/service/src/service/common/responses/: mod.rs
backend/service/src/service/common/types/: error_msg.rs  limit.rs  mod.rs  page.rs  page_info.rs
backend/service/src/settings/: auth.rs  mod.rs  osv.rs  tests.rs
backend/service/src/types/: email.rs  manifest_info.rs  manifest_type.rs  mod.rs  osv_id.rs  user_id.rs  uuid_v7.rs
backend/service/src/types/manifest/: id.rs  info.rs  mod.rs  name.rs  package.rs  tag.rs  type.rs
backend/service/src/types/notification/: channel_id.rs  mod.rs
backend/service/src/types/notification/conf/: discord.rs  email.rs  mod.rs  type.rs
backend/service/src/types/notification/conf/discord/: mod.rs  schema.cue
backend/service/src/types/notification/conf/email/: mod.rs
backend/service/src/types/notification/conf/webhook/: mod.rs
backend/service/src/types/notification/event/: event_id.rs  meta.rs  meta_schema.cue  mod.rs  schema.cue
backend/service/src/types/osv/: credit.rs  ecosystem.rs  mod.rs  package.rs  severity.rs
backend/service/src/types/workspace/: id.rs  info.rs  name.rs
cli/: .gitignore  go.mod  go.sum  main.go
dagger/scripts/: entrypoint.sh  install-cli.sh
docs/: SUMMARY.md  api-reference.html  build-and-run.md  ecosystems.md  introduction.md  manifest-upload.md  service-configuration.md
frontend/: Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.tsx
oppsy-cli/: go.mod  go.sum  main.go
oppsy-cli/cmd/: run.go
scripts/: fetch_osv_record.sh
(+158 files in other folders)
