[workspace]
resolver = "3"
members = [
    "common",
    "core-db",
    "package-analyzer",
    "service",
    "manifest-storage",
    "notifier",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(track_caller)'] }
warnings = "deny"
missing_docs = "allow"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_time_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "allow"
arithmetic_side_effects = "deny"
missing_errors_doc = "allow"

[workspace.dependencies]
common = { path = "./common" }
manifest-storage = { path = "./manifest-storage" }
package-analyzer = { path = "./package-analyzer" }
webhook-notifier = { path = "./webhook-notifier" }
core-db = { path = "./core-db" }

test-case = "3.3.1"
test-with = "0.16.1"

url = "2"
anyhow = "1.0.102"
chrono = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
osv-db = "0.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1.89"
tempfile = "3"
jsonschema = { version = "0.45", default-features = false }
dotenvy = "0.15.7"
bytes = "1"
poem = { version = "3.1.12", features = ["static-files"] }
poem-openapi = { version = "5.1.16", features = ["openapi-explorer", "rapidoc", "redoc", "swagger-ui", "uuid", "url", "cookie", "chrono"] }
oauth2 = { version = "5.0.0", default-features = false }
uuid = { version = "1.22", features = ["v7", "serde"] }
config = "0.15.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
dashmap = "6.1.0"
moka = { version = "0.12.8", features = ["future"] }
thiserror = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rayon = "1"

hex = "0.4"
base64 = "0.22.1"

rand = "0.10"
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core"] }
hmac = "0.12"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

sqlx = { version = "0.8.6", features = ["sqlite", "uuid", "runtime-tokio"] }
strum = { version = "0.28", features = ["derive"] }

