[package]
name = "core-db"
description = "SQL backed core domain database for OPPSY"
version.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common", version = "0.1.0" }

sqlx.workspace = true
uuid.workspace = true
serde_json.workspace = true

thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio.workspace = true
test-with.workspace = true
