[package]
name = "notifier"
description = "Notification delivery for OPPSY"
version.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true

async-trait.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

lettre.workspace = true
webhook.workspace = true
