[package]
name = "package-analyzer"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common", version = "0.1.0" }

osv-db.workspace = true
osv-types.workspace = true
osv-analyzer.workspace = true

anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
dashmap.workspace = true

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
tempfile.workspace = true
test-case.workspace = true
rand.workspace = true

[lints]
workspace = true
